Name:                   cloudprint-api
Version:                0.0.0
Author:                 kevin cotrone <kevincotrone@gmail.com>
Maintainer:             kevin cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Network.Cloudprint
  Other-Modules:        Network.Cloudprint.Internal
  Build-Depends:        base >= 4 && < 5
                      , google-oauth2 >= 0.1.1
                      , http-conduit
                      , bytestring
                      , transformers
                      , http-types
                      , aeson
                      , http-client
                      , either
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
